# vpm_py

./: .gitignore  CMakeLists.txt  notes.md  pyproject.toml  setup.py
cmake/: BuildHDF5.cmake  FindCompilers.cmake  SetupHDF5.cmake  SetupMudpackSP.cmake  VpmCompilerFlags.cmake  VpmLibraries.cmake  VpmSetupSolvers.cmake
source/: api.f90  api_operators_serial.f90  arrays.f90  base_types.f90  console_io.f90  constants.f90  data_communication.f90  data_mpi_communication.f90  file_io.f90  io.f90  main_pm.f90  mkl_dfti.f90  mkl_poisson.f90  mpi_matrices.f90  operators_serial.f90  parvar.f90  pinfdomain.f90  pmbound.f90  pmeshpar.f90  pmgrid.f90  pmlib.f90  pmproject.f90  pmsolve.f90  pmsolve_fish.f90  pmsolve_mkl.f90  pmsolve_mudpack.f90  vpm.f90  vpm_functions.f90  vpm_gcalc.f90  vpm_interpolate.f90  vpm_mpi.f90  vpm_old.f90  vpm_remesh.f90  vpm_size.f90  vpm_time.f90  vpm_types.f90  vpm_vars.f90  yaps.f90  yaps2d.f90  yaps3d.f90
source/mudpack/: mud3sp.f  mudcom.f  mudpack.f
test/: animate_particles.py  hill_spherical_vortex.py  interpolations.py  notebook.ipynb  particles_generator.py  pm.inp  read_hist.py  read_particles  solver_information.py  test.f90  test.py  test_RK4.py  test_animate_particles.py  test_api.py  test_arrays.f90  test_derivative.py  test_equations.ipynb  test_hill_problem.py  test_hill_spherical_vortex.py  test_hill_vortex.py  test_notebook.ipynb  test_notebook_RK4.ipynb  test_operators.f90  test_oseen_pressure.ipynb  test_oseen_vortex.py  test_problems.f90  test_read_meta.ipynb  test_ricker_wavelet.py  test_visualize_particles.ipynb  utils.f90  visualize_particles.ipynb
test/test_problems/: hill_vortex.py  oseen_vortex.py  problems.f90  ricker_wavelet.py  visualize_vorticity.py
test/utils/: problems.f90  vort.py
vpm_py/: __init__.py  arrays.py  console_io.py  files.py  interpolations.py  operators_lib.py  particle_mesh.py  particle_mesh_parameters.py  particles.py  process_files.py  utils.py  visualization.py  vpm.py  vpm_dtypes.py  vpm_io.py  vpm_lib.py
vpm_py/equations/: __init__.py  equations.py  expressions.py  operation_tree.py  operators.py  terms.py
vpm_py/file_io/: __init__.py  mesh_file.py  particle_file.py  process_files.py
vpm_py/visualization/: __init__.py  annotate3D.py  data_adapter.py  data_adapters.py  filters.py  plots.py  plotters.py  quantities.py  slices.py  standard_visualizer.py  visualizer.py  writer.py
